Mahout Change Log

Release 0.8 - unreleased

  MAHOUT-1243: Dictionary file format in Lucene-Mahout integration is not in SequenceFileFormat (ssc)

  MAHOUT-974:  org.apache.mahout.cf.taste.hadoop.als.ParallelALSFactorizationJob use integer as userId and itemId (ssc)

  MAHOUT-1052: Add an option to MinHashDriver that specifies the dimension of vector to hash (indexes or values) (Elena Smirnova via smarthi)

  MAHOUT-1237: Total cluster cost isn't computed properly (dfilimon)

  MAHOUT-1196: LogisticModelParameters uses csv.getTargetCategories() even if csv is not used. (Vineet Krishnan via ssc)

  MAHOUT-1224: Add the option of running a StreamingKMeans pass in the Reducer before BallKMeans (dfilimon)

  MAHOUT-993:  Some vector dumper flags are expecting arguments. (Andrew Look via robinanil)

  MAHOUT-1228: Cleanup .gitignore (Stevo Slavic via ssc)

  MAHOUT-1047: CVB hangs after completion (Angel Martinez Gonzalez via smarthi)
  
  MAHOUT-1235: ParallelALSFactorizationJob does not use VectorSumCombiner (ssc)

  MAHOUT-1230: SparceMatrix.clone() is not deep copy (Maysam Yabandeh via tdunning)
  
  MAHOUT-1232: VectorHelper.topEntries() throws a NPE when number of NonZero elements in vector < maxEntries (smarthi)

  MAHOUT-1229: Conf directory content from Mahout distribution archives cannot be unpacked (Stevo Slavic via smarthi)
  
  MAHOUT-1213: SSVD job doesn't clean it's temp dir, and fails when seeing it again (smarthi)

  MAHOUT-1223: Fixed point skipped in StreamingKMeans when iterating through centroids from a reducer (dfilimon)

  MAHOUT-1222: Fix total weight in FastProjectionSearch (dfilimon)

  MAHOUT-1219: Remove LSHSearcher from StreamingKMeansTest. It causes it to sometimes fail (dfilimon)

  MAHOUT-1221: SparseMatrix.viewRow is sometimes readonly. (Maysam Yabandeh via smarthi)

  MAHOUT-1219: Remove LSHSearcher from SearchQualityTest. It causes it to fail, but the failure is not very meaningful (dfilimon)
